fix(CopyrightRenderer): overflowing to multiple lines if the first copyright is very long

--- a/src/styles/_App.scss
+++ b/src/styles/_App.scss
@@ -210,4 +210,7 @@
 
 .copyrightVal {
   cursor: pointer;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
